--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Insert Your Name Here">
+    <meta name="author" content="Terrence">
     <title>Insert Title for this Page Here</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -11,8 +11,7 @@
 
     <h1>👋 Hello World!</h1>
     <p>
-    In the body section is where you’ll write all of your 
-    HTML and/or copy-paste it from your codepen.io drafts
+    This is a game me and me teammates came up with in class, this game is similar to the game trouble with the dice and pieces but there is a treat. If one of your piece lands on a specific spot money will start shooting at you but if you land in a bad spot your pieces will tip over and you will have to start from the begining.
     </p>
 
   </body>
